# pr1-PAG

./: .gitignore  CMakeLists.txt  Camara.cpp  Camara.h  Constantes.h  GUI.cpp  GUI.h  Luz.cpp  Luz.h  Malla.cpp  Malla.h  Material.cpp  Material.h  Modelo.cpp  Modelo.h  README.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  conandata.yml  main.cpp  manual_de_uso.md  pag03-fs.glsl  pag03-vs.glsl
Renderer/: Renderer.h
assimp/test/: CMakeLists.txt
shader_files/: pag03-vs.glsl  pag05-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl  pag09-fs.glsl  pag09-vs.glsl
utilities/: Camara.cpp  Constantes.cpp  Constantes.h  GUI.cpp  GUI.h  Luz.cpp  Luz.h  Malla.cpp  Malla.h  Material.cpp  Material.h  Modelo.cpp  Modelo.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Textura.cpp  Textura.h
ventanas-gui/: Ventana.h  VentanaLog.cpp  VentanaLog.h  VentanaMovimientoCamara.cpp  VentanaMovimientoCamara.h  VentanaParametrosCamara.cpp  VentanaParametrosCamara.h  VentanaSeleccionColor.cpp  VentanaSeleccionColor.h  VentanaSeleccionShaderProgram.cpp  VentanaSeleccionShaderProgram.h  VentanaSelectorModelo.cpp  VentanaSelectorModelo.h  VentanaTransformacionesModelos.cpp  VentanaTransformacionesModelos.h
